css/main.css
/* CSS Document */
body {
	background: url(../images/3scoops.jpg) no-repeat center center; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	min-height: 1000px;
}
h4 {
	margin-top: 200px;
	font-family: "IBM Plex Sans Condensed", "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
	font-weight: 400;
    text-align: center;
    text-transform: lowercase;
	font-size: 3em;
	line-height: 1em;
	color: white;
}
h1 {
	font-family: 'IBM Plex Sans Condensed', sans-serif;
	font-weight: 700;
    text-align: center;
    text-transform: uppercase;
    font-size: 8em;
    line-height: 1em;
	letter-spacing: .5em;
	margin-left: .7em;
	color: white;
}
#content {
	width: 600px;
	margin: 600px auto 0 auto;
}
#content p {
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
	color: white;
	text-align: justify;
	font-size: 1.5em;
	min-width: 400px;
}
#footer {
	margin: 200px 50px 0 0;
}
#footer p {
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
	color: white;
	text-align: right;
	font-size: .7em;
	min-width: 400px;
}
#footer p a {
	color: white;
	font-weight: bold;
}

